<resources>
    <string name="app_name">EzExpenses</string>
    <string name="tagline">Split Your House Expenses</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">New user? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter you registered email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_text"> </string>

    <!-- Profile -->
    <string name="profile_names">Display name</string>
    <string name="induce_smile">EzExpenses</string>
    <string name="name">ProfileName</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="save_edit">Save edit</string>

    <!-- Group -->

    <string name="edit_group_groupName">Group Name</string>
    <string name="radio_house">House</string>
    <string name="radio_condominium">Condominium</string>
    <string name="radio_apartment">Apartment</string>
    <string name="radio_flat">Flat</string>
    <string name="radio_others">Others</string>
    <string name="add_contact">ADD</string>
    <string name="add_group">CREATE GROUP</string>
    <string name="manage_group">MANAGE GROUP</string>

    <string name="profile_name">Ez Expenses</string>
    <string name="country_location">Malaysia</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_group">Manage Groups</string>
    <string name="menu_expenses">Manage Expenses</string>


    <string name="amount">Amount</string>
    <string name="date">Date</string>

    <!-- Expenses -->
    <string name="expenses_prompt">Choose the expenses type</string>

    <string-array name="expenses_arrays">
        <item>Please choose an option</item>
        <item>Rent</item>
        <item>Electricity</item>
        <item>Water</item>
        <item>Gas</item>
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Internet</item>
        <item>Maintenance</item>
        <item>Others</item>
    </string-array>

    <string name="btn_addexpenses">Add Expenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
