<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fariza.mpezexpenses.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_managegroup"
        android:name="com.fariza.mpezexpenses.ui.managegroup.ManageGroupFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_manage_group" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.fariza.mpezexpenses.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <!--
    <fragment
        android:id="@+id/nav_share"
        android:name="com.fariza.mpezexpenses.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.fariza.mpezexpenses.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" /> -->
</navigation>